# CircusTrain

./: .gitignore  CMakeLists.txt
Google_tests/: CMakeLists.txt
Google_tests/tests/: Animal.cpp  RailCar.cpp  Train.cpp
app/: CMakeLists.txt
app/src/: CsvLoader.cpp  CsvLoader.hpp  main.cpp
app/src/model/: Animal.cpp  RailCar.cpp  Train.cpp  include.hpp
app/src/model/include/: Animal.hpp  DietType.hpp  RailCar.hpp  Train.hpp  WeightClass.hpp
